fix module name

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,9 @@ _testmain.go
 *.test
 
 /examples/example
+/.idea/.gitignore
+/.idea/go-bitcoind.iml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/inspectionProfiles/Project_Default.xml
+/.idea/vcs.xml
